# NLU

./: .gitignore  Group_56_B.csv  Group_56_C.csv  README.md  demo_notebook_C.ipynb  download  model_card_C.md  model_card_solution_B.md  nli_demo_code.ipynb  nli_hparam_search.py  requirements.txt  training_notebook_C.ipynb
data/raw/: NLI_trial.csv  predictions.csv
model_cards/: Model Card Creation.ipynb
notebooks/: solution_A_final_dev_model.ipynb  solution_A_final_test_model.ipynb
outputs/predictions/: Group_56_A.csv  solution_A_final_dev_predictions.csv
runs/checked/: training_history.csv
scorer/: README.md  environment.yml  pyproject.toml
scorer/baseline/: 25_DEV_AV.csv  25_DEV_ED.csv  25_DEV_NLI.csv
scorer/local_scorer/: __init__.py  io_utils.py  main.py  metric.txt  metrics.py
scorer/local_scorer/reference_data/: NLU_SharedTask_AV_dev.solution  NLU_SharedTask_ED_dev.solution  NLU_SharedTask_NLI_dev.solution
scorer/tests/: test_local_scorer.py
